--- a/package.json
+++ b/package.json
@@ -6,18 +6,19 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "express": "~4.2.0",
-    "static-favicon": "~1.0.0",
-    "morgan": "~1.0.0",
-    "cookie-parser": "~1.0.1",
+    "bcrypt-nodejs": "*",
     "body-parser": "~1.0.0",
-    "express-session": "~1.0.4",
+    "connect-flash": "*",
+    "cookie-parser": "~1.0.1",
     "debug": "~0.7.4",
+    "express": "~4.2.0",
+    "express-session": "~1.0.4",
     "jade": "~1.3.0",
+    "moment": "^2.9.0",
+    "mongoose": "~3.8.12",
+    "morgan": "~1.0.0",
     "passport": "~0.2.0",
     "passport-local": "~1.0.0",
-    "mongoose": "~3.8.12",
-    "bcrypt-nodejs" : "*",
-    "connect-flash" : "*"
+    "static-favicon": "~1.0.0"
   }
 }
